crates/roughly/tests/snapshots/test_format__function_definition__all_comment_positions.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
( # hack: only parses correctly with surrounding parentheses
  function # function
  # 1
  ( # (
    # 2
    param # param
    # 3
  ) # )
  # 4
  {} # body
)
