crates/roughly/tests/snapshots/test_format__function_definition__auto_braces.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
function() {
  body
}

function() {
  call(a = 1, b = 1)
}

function() {
  call(
    a = 1,
    b = 1
  )
}
