crates/roughly/tests/snapshots/test_format__function_definition__basic.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
function(a, b) {}

function(a, b = c) {}

function(a, b = c) { body }

function(a, b = c) {
  body
}
