crates/roughly/tests/snapshots/test_format__function_definition__body_is_call.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
function() call(a = 1, b = 1)

function() {
  call(a = 1, b = 1)
}

function() call(
  a = 1,
  b = 1
)

function() {
  call(
    a = 1,
    b = 1
  )
}
