crates/roughly/tests/snapshots/test_format__function_definition__body_no_braces.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
function() body

function() {
  body
}
