crates/roughly/tests/snapshots/test_format__function_definition__comments_all_positions.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
# hack: only parses correctly with surrounding parentheses
(
  function # function
  # 1
  ( # (
    # 2
    parameter # parameter
    # 3
  ) # )
  # 4
  {}
)
