crates/roughly/tests/snapshots/test_format__function_definition__empty.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
function() {}

function() {}

function() {}

function() {}
