crates/roughly/tests/snapshots/test_format__function_definition__immediately_invocated.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
(\(a, b) a * b)(x, y)

(\(a, b) a * b)(x, y)

(\(a, b) {
  a * b
})(x, y)
