crates/roughly/tests/snapshots/test_format__function_definition__no_spaces.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
function(a, b = default) { body }

function(a, b = default) {
  body
}
